applications/mm-inches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-inches
  namespace: unit-conversions
  labels:
    app.kubernetes.io/name: mm-inches
spec:
  selector:
    app.kubernetes.io/name: mm-inches
  ports:
    - name: http
      port: 80
      targetPort: http
