applications/mm-inches/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mm-inches
  namespace: unit-conversions
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - units.k8s.749rmw.com
  rules:
    - backendRefs:
        - name: mm-inches
          port: 80
